fix layout issue on iphone

--- a/default.css
+++ b/default.css
@@ -27,6 +27,7 @@ body {
 	position: absolute;
 	z-index: 9999;
 	width: 100%;
+	height: 0px;
 	top: 50%;
 }
 
